--- a/src/main/resources/com/example/quanlycongviec/View/PhanCongCV.fxml
+++ b/src/main/resources/com/example/quanlycongviec/View/PhanCongCV.fxml
@@ -20,7 +20,7 @@
          <graphic>
             <ImageView fitHeight="25.0" fitWidth="35.0" pickOnBounds="true" preserveRatio="true">
                <image>
-                  <Image url="@../image/multiple-users-silhouette.png" />
+                  <Image url="@image/multiple-users-silhouette.png" />
                </image>
             </ImageView>
          </graphic>
@@ -32,7 +32,7 @@
          <graphic>
             <ImageView fitHeight="25.0" fitWidth="35.0" pickOnBounds="true" preserveRatio="true">
                <image>
-                  <Image url="@../image/add.png" />
+                  <Image url="@image/add.png" />
                </image>
             </ImageView>
          </graphic>
@@ -44,7 +44,7 @@
          <graphic>
             <ImageView fitHeight="25.0" fitWidth="35.0" pickOnBounds="true" preserveRatio="true">
                <image>
-                  <Image url="@../image/bin.png" />
+                  <Image url="@image/bin.png" />
                </image>
             </ImageView>
          </graphic>
@@ -56,7 +56,7 @@
          <graphic>
             <ImageView fitHeight="25.0" fitWidth="35.0" pickOnBounds="true" preserveRatio="true">
                <image>
-                  <Image url="@../image/repair.png" />
+                  <Image url="@image/repair.png" />
                </image>
             </ImageView>
          </graphic>
