--- a/src/main/resources/com/example/quanlycongviec/View/Home.fxml
+++ b/src/main/resources/com/example/quanlycongviec/View/Home.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="450.0" prefWidth="642.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.qlnhanvien.HomeController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="450.0" prefWidth="642.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.quanlycongviec.View.HomeController">
    <children>
       <Label layoutX="10.0" layoutY="10.0" text="Tổng quan">
          <font>
@@ -20,7 +20,7 @@
          <graphic>
             <ImageView fitHeight="40.0" fitWidth="40.0" pickOnBounds="true" preserveRatio="true">
                <image>
-                  <Image url="@image/new.png" />
+                  <Image url="@../image/new.png" />
                </image>
             </ImageView>
          </graphic>
@@ -32,7 +32,7 @@
          <graphic>
             <ImageView fitHeight="40.0" fitWidth="40.0" pickOnBounds="true" preserveRatio="true">
                <image>
-                  <Image url="@image/new.png" />
+                  <Image url="@../image/new.png" />
                </image>
             </ImageView>
          </graphic>
@@ -41,7 +41,7 @@
          <children>
             <ImageView fitHeight="100.0" fitWidth="60.0" layoutX="154.0" layoutY="44.0" pickOnBounds="true" preserveRatio="true">
                <image>
-                  <Image url="@image/user.png" />
+                  <Image url="@../image/user.png" />
                </image>
             </ImageView>
             <Label layoutX="13.0" layoutY="83.0" text="Nhân viên">
@@ -60,7 +60,7 @@
          <children>
             <ImageView fitHeight="100.0" fitWidth="60.0" layoutX="154.0" layoutY="49.0" pickOnBounds="true" preserveRatio="true">
                <image>
-                  <Image url="@image/circular-diagram.png" />
+                  <Image url="@../image/circular-diagram.png" />
                </image>
             </ImageView>
             <Label layoutX="11.0" layoutY="84.0" text=" NV nghỉ việc">
@@ -79,7 +79,7 @@
          <children>
             <ImageView fitHeight="100.0" fitWidth="60.0" layoutX="156.0" layoutY="46.0" pickOnBounds="true" preserveRatio="true">
                <image>
-                  <Image url="@image/search.png" />
+                  <Image url="@../image/search.png" />
                </image>
             </ImageView>
             <Label layoutX="13.0" layoutY="83.0" text="Tiến độ">
@@ -98,7 +98,7 @@
          <children>
             <ImageView fitHeight="100.0" fitWidth="60.0" layoutX="151.0" layoutY="49.0" pickOnBounds="true" preserveRatio="true">
                <image>
-                  <Image url="@image/job-seeker.png" />
+                  <Image url="@../image/job-seeker.png" />
                </image>
             </ImageView>
             <Label layoutX="13.0" layoutY="82.0" text="Công việc">
