--- a/src/main/resources/com/example/quanlycongviec/View/Thanhtich.fxml
+++ b/src/main/resources/com/example/quanlycongviec/View/Thanhtich.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="450.0" prefWidth="642.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.quanlynhanvien.ThanhTichController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="450.0" prefWidth="642.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.quanlycongviec.View.ThanhTichController">
    <children>
       <Label layoutX="10.0" layoutY="10.0" text="Thành tích">
          <font>
@@ -18,7 +18,7 @@
          <graphic>
             <ImageView fitHeight="25.0" fitWidth="35.0" pickOnBounds="true" preserveRatio="true">
                <image>
-                  <Image url="@image/medal-.png" />
+                  <Image url="@../image/medal-.png" />
                </image>
             </ImageView>
          </graphic>
