--- a/src/main/resources/com/example/quanlycongviec/View/TienDoCV.fxml
+++ b/src/main/resources/com/example/quanlycongviec/View/TienDoCV.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="450.0" prefWidth="642.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.quanlynhanvien.TienDoCvController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="450.0" prefWidth="642.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.quanlycongviec.View.TienDoCvController">
    <children>
       <Label layoutX="10.0" layoutY="10.0" text="Tiến độ công việc">
          <font>
@@ -17,7 +17,7 @@
          <graphic>
             <ImageView fitHeight="25.0" fitWidth="35.0" pickOnBounds="true" preserveRatio="true">
                <image>
-                  <Image url="@image/id-card.png" />
+                  <Image url="@../image/id-card.png" />
                </image>
             </ImageView>
          </graphic>
@@ -39,7 +39,7 @@
          <graphic>
             <ImageView fitHeight="25.0" fitWidth="35.0" pickOnBounds="true" preserveRatio="true">
                <image>
-                  <Image url="@image/fast-forward.png" />
+                  <Image url="@../image/fast-forward.png" />
                </image>
             </ImageView>
          </graphic>
