upload full code

--- a/src/main/resources/com/example/qlnhanvien/View/GDCV_Chuathuchien.fxml
+++ b/src/main/resources/com/example/qlnhanvien/View/GDCV_Chuathuchien.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="450.0" prefWidth="612.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.quanlynhanvien.GDCV_ChuathuchienController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="450.0" prefWidth="612.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.qlnhanvien.View.GDCV_ChuathuchienController">
    <children>
       <TableView fx:id="table_taca" layoutY="24.0" prefHeight="350.0" prefWidth="612.0">
          <columns>
