--- a/src/main/resources/com/example/qlnhanvien/View/GiaoDienNV_Chat.fxml
+++ b/src/main/resources/com/example/qlnhanvien/View/GiaoDienNV_Chat.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.text.Font?>
 
 
-<AnchorPane prefHeight="450.0" prefWidth="645.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.quanlynhanvien.GiaoDienNVChatController">
+<AnchorPane prefHeight="450.0" prefWidth="645.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.qlnhanvien.View.GiaoDienNVChatController">
    <children>
       <Label layoutX="265.0" layoutY="14.0" text="Nhóm chat">
          <font>
