--- a/src/main/resources/com/example/qlnhanvien/View/giaodienlilich.fxml
+++ b/src/main/resources/com/example/qlnhanvien/View/giaodienlilich.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="450.0" prefWidth="646.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.quanlynhanvien.GiaoDienLiLichController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="450.0" prefWidth="646.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.qlnhanvien.View.GiaoDienLiLichController">
    <children>
       <Label layoutX="239.0" layoutY="77.0" prefHeight="27.0" prefWidth="83.0" text="Họ Và Tên:">
          <font>
